force-app/main/default/objects/Activity/fields/Change_Par__c.field-meta.xml
<CustomField>
    <fullName>Change_Par__c</fullName>
    <description>Indique le no de l&apos;utilisateur qui a changé la tâche en dernnier.</description>
    <label>Changé Par</label>
    <length>100</length>
    <type>Text</type>
</CustomField>