force-app/main/default/objects/Activity/fields/Commentaires_EMLYON__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_EMLYON__c</fullName>
    <label>Commentaires EMLYON</label>
    <type>TextArea</type>
</CustomField>