force-app/main/default/objects/Activity/fields/Statut_Precedent__c.field-meta.xml
<CustomField>
    <fullName>Statut_Precedent__c</fullName>
    <description>Indique le statut de la tâche avant la dernière modification.</description>
    <label>Statut Précédent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>