force-app/main/default/objects/Activity/fields/TECH_External_Who_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_External_Who_Id__c</fullName>
    <description>Champ stockant le champ polymorphique WhoId. C&apos;est utile notamment pour conserver les liens entre les objets en vue de l&apos;insertion des données dans un nouvel environnement.</description>
    <externalId>true</externalId>
    <label>TECH_External_Who_Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>