force-app/main/default/objects/Activity/fields/TECH_Is_Record_Transferring__c.field-meta.xml
<CustomField>
    <fullName>TECH_Is_Record_Transferring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique booléen qui ne sera utilisé que lors d&apos;un transfert de données pertinentes entre l&apos;environnement de production et une sandbox</description>
    <label>TECH_Is_Record_Transferring</label>
    <type>Checkbox</type>
</CustomField>